feat: add basic page layout

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             <li>listening B2 | reading B2 | writing B1
                 spoken production B2 | spoken interaction B2</li>
         </ul>
+        <section class="footer">
+            <a href="https://github.com/ana-kobakhidze"><img src="https://i.ibb.co/dP5QMM8/git-logo.png" alt="git-logo"></a>
+            <a href="https://rs.school/"><img src="https://i.ibb.co/hMWnVLp/rs-school-logo.png" alt="rs-school-logo"></a>
+            <p>16.04.2022</p>
+            <a href="#">Ana Kobakhidze</a>
+        </section>
 
     </section>
   </body>
