--- a/index.html
+++ b/index.html
@@ -1,73 +1,143 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
   <body>
-    <section class="about">
-      <h1>Ana Kobakhidze</h1>
-      <p>
-        Started career as graphic designer, have 7 year experience in
-        conceptualising and managing digital marketing campaigns over social
-        media and other mediums, specialised in rebranding projects. I almost
-        have no working experience in this field, but I'm very fast learner and
-        motivated. My daily routine includes reading technical documentations,
-        doing quizzes, watching tutorials. I believe that my willingness to
-        learn and ability to acquire new skills will help me become an
-        experienced Frontend Developer.
-      </p>
-      <ul>
-        <li>+995 599 54 79 74</li>
-        <li>ana.s.kobakhidze@gmail.com</li>
-        <li>be.net/annakooo</li>
-        <li>https://github.com/ana-kobakhidze</li>
-      </ul>
+     <header>
+       <img class="logo" src="https://i.postimg.cc/k41TcFGf/JUNO-logo.png" alt="JUNO-LOGO">
+     </header>
+
+<!-- //// summary -->
+<section id="main">
+    <section id="summary">
+       <p>
+        Started career as a graphic designer, have 7 years of experience in 
+        conceptualizing and managing digital marketing campaigns over social 
+        media and other mediums, and specialized in rebranding projects. I almost 
+        have no working experience in this field, but I'm a very fast learner and 
+        motivated. My daily routine includes reading technical documentation, 
+        doing quizzes, and watching tutorials. I believe that my willingness to 
+        learn and ability to acquire new skills will help me become an 
+        experienced Frontend Developer. 
+       </p>
     </section>
-    <section class="education">
-      <ul>
-        <li>
-          codehs: certificated courseIntroduction to computer sience in JS
-        </li>
-        <li>W3schools: html/css course</li>
-        <li>
-          FreeCodeCamp: Responsive Web Design | Javascript Algorithms and Data
-          structures | Front End Development Libraries
-        </li>
-        <li>
-          Udemy: React-the complete guide (incl Hooks, React Router, Redux)
-        </li>
-        <li>RS Schools: JavaScript/Front-end</li>
-      </ul>
-    </section>
-    <section class="skills">
-       <li>HTML5, CSS3</li> 
-       <li>JavaScript Basics</li>
-       <li>React Basics</li>
-       <li>Git, GitHub</li> 
-       <li>VS Code</li> 
-       <li>Adobe Photoshop, Illustrator, After effects</li> 
-       <li>Procreate</li> 
-       <li>cinema 4d</li> 
-       <li>sketching, drawing</li>
-    </section>
-    <section class="experience">
-        <ul>
-            <li><a href="https://ana-kobakhidze.github.io/redberry-form/">✨Wizard Form</a></li>
-            <li><a href="https://ana-kobakhidze.github.io/random-quotes/">✨Random Quotes</a></li>
-            <li><a href="https://ana-kobakhidze.github.io/drum-machine/">✨Drum Machine</a></li>
-        </ul>
-    </section>
-    <section class="language">
-        <ul>
-            <li>GEORGIAN: native</li>
-            <li>ENGLISH: listening B2 | reading B2 | writing B1
-                spoken production B2 | spoken interaction B2</li>
-            <li>listening B2 | reading B2 | writing B1
-                spoken production B2 | spoken interaction B2</li>
-        </ul>
-        <section class="footer">
-            <a href="https://github.com/ana-kobakhidze"><img src="https://i.ibb.co/dP5QMM8/git-logo.png" alt="git-logo"></a>
-            <a href="https://rs.school/"><img src="https://i.ibb.co/hMWnVLp/rs-school-logo.png" alt="rs-school-logo"></a>
+
+
+<!-- experience-->
+
+<section id="experience">
+<ul>
+<li> <a href="https://ana-kobakhidze.github.io/redberry-form/" target="_blank">Wizard Form</a></li>
+<li> <a href="https://ana-kobakhidze.github.io/random-quotes/" target="_blank">Random Quotes</a></li>
+<li> <a href="https://ana-kobakhidze.github.io/drum-machine/" target="_blank">Drum Machine</a></li>
+<li> <a href="https://github.com/ana-kobakhidze/PDP" target="_blank">E-commerce pages</a></li>
+<li> <a href="https://ana-kobakhidze.github.io/markdown-previewer/" target="_blank">Markdown previewer</a></li>
+<li> <a href="https://github.com/ana-kobakhidze/PDP" target="_blank">E-commerce pages</a></li>
+</ul>
+</section>
+
+<!--language --> 
+
+<section id="language">
+<ul>
+<li>ENGLISH<br> listening B2 | reading B2 | writing B1 <br> spoken production B2 | spoken interaction B2</li>
+<li>RUSSIAN<br> listening B2 | reading B2 | writing B1 <br> spoken production B2 | spoken interaction B2</li>
+<li>GEORGIAN | native</li>
+</ul>
+</section>
+
+<!-- //// skills --> 
+<section id="skills">
+<ul class="rightSide">
+<li>Adobe Photoshop</li>
+<li>Adobe Illustrator</li>
+<li>Adobe After Effects</li>
+<li>Procreate</li>
+<li>Cinema 4D</li>
+<li>sketching, drawing</li>
+</ul> 
+<ul>
+<li>HTML5</li>
+<li>CSS3</li>
+<li>JavaScript Basics</li>
+<li>React Basics</li>
+<li>Git, Github</li>
+<li>VS Code</li>
+</ul>
+
+</section>
+
+<!-- //// contact -->
+<section id="contact">
+<ul>
+<li>+995 599 54 79 74</li>
+<li>ana.s.kobakhidze@gmail.com</li>
+<li>https://www.linkedin.com/in/ana-s-kobakhidze/</li>
+<li>https://github.com/ana-kobakhidze</li>
+<li>https://www.behance.net/annakooo</li>
+</ul>
+</section>
+
+<!-- //// education --> 
+<section id="education">
+<ul class="rightSide">
+<li>Introduction to computer sience in JS</li> 
+<hr>      
+<li>Html / Css course</li>
+<hr>
+<li>Responsive Web Design</li>
+<hr>
+<li>Javascript Algorithms and Data structures</li>
+<hr>
+<li>Front End Development Libraries</li>
+<hr>
+<li>React-the complete guide</li>
+<hr>
+<li>JavaScript/Front-end</li>
+</ul>
+
+<ul>
+<li>Codehs</li>
+<hr>
+<li>W3schools</li>
+<hr>
+<li>FreeCodeCamp</li>
+<hr>
+<li>FreeCodeCamp</li>
+<hr>
+<li>FreeCodeCamp</li>
+<hr>
+<li>Udemy</li>
+<hr>
+<li>RS Schools Course</li>
+
+</ul>
+</section>
+</section>
+<!-- //// navigation links -->
+
+<nav id="navLinks" >
+<a href="#summary">summary</a>
+<a href="#experience">experience</a>
+<a href="#language">language</a>
+<a href="#skills">skills</a>
+<a href="#contact">contact</a>
+<a href="#education">education</a>
+</nav>
+
+<!-- //// footer -->
+        <section>
+          <img id="breakline"src="https://i.postimg.cc/QCP8tmTx/break-line.png" alt="line" width="530px" height="auto">
+
+<footer id="footer-info">
+<a href="https://rs.school/" target="_blank"><img src="https://i.postimg.cc/YC9LnDpj/rs-school-logo.png" alt="rs-school-logo" width="auto" height="30px"></a>
+           
             <p>16.04.2022</p>
             <a href="#">Ana Kobakhidze</a>
+ <a href="https://github.com/ana-kobakhidze" target="_blank"><img src="https://i.postimg.cc/gkyKF7FD/git-logo.png" alt="git-logo" width="auto" height="30px"></a>
+<footer>
         </section>
 
     </section>
