--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      </header>
 
 <!-- //// summary -->
-<section id="main">
+<main id="main">
     <section id="summary">
        <p>
         Started career as a graphic designer, have 7 years of experience in 
@@ -134,7 +134,7 @@
 </code>
 </pre>
 </section>
-</section>
+</main>
 <!-- navigation links -->
 
 <nav id="navLinks" >
